# unitree_ros

robots/go2_description/: CMakeLists.txt  package.xml
robots/go2_description/config/: go2.srdf  ros2_control_go2.yaml
robots/go2_description/hooks/: go2_description.dsv.in
robots/go2_description/launch/: check_joint.rviz  gazebo.launch  gazebo.launch.py  go2_rviz.launch  spawn_go2.launch.py
robots/go2_description/models/wall_2x5/: model.config  model.sdf
robots/go2_description/urdf/: go2_description.urdf
robots/go2_description/worlds/: ground_plane.sdf  ionic_reduced.sdf  living_room.sdf
robots/go2_description/xacro/: gazebo.xacro  robot.urdf.xacro  robot.xacro  ros2_control_macro.xacro
robots/go2w_description/: CMakeLists.txt  package.xml
robots/go2w_description/launch/: go2w_rviz.launch
